2006-08-28  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Place article in the right place.

2006-08-25  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add link to japanese translation by Satoshi Tanabe
	of the "Creating a GUI using PyGTK and Glade" article

2006-08-21  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add PanelSwitcher and SessionBackup

2006-08-20  Rafael Villar Burke  <pachi@rvburke.com>
	* applications.src: Add SaberNet DCS.

2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>

	* articles/writing-a-custom-widget-using-pygtk/writing-a-custom-widget-using-pygtk.htm:
	* articles/writing-a-custom-widget-using-pygtk/resources/starHScale.swf: fix
	article source and add missing file

2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: link article by Mark Mruss
	* newsitems.src: new article item

2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>

	* articles/writing-a-custom-widget-using-pygtk.htm
	* articles/writing-a-custom-widget-using-pygtk/resources/iTunesStars.png
	* articles/writing-a-custom-widget-using-pygtk/resources/somerights20.png
	* articles/writing-a-custom-widget-using-pygtk/resources/starhscale.tar.gz
	* articles/writing-a-custom-widget-using-pygtk/resources/style.css: upload
	new article by Mark Mruss

2006-07-28  Christian Reis  <kiko@async.com.br>

	* applications.src: Add GFCE Ultra.

2006-07-06  John Finlay  <finlay@moeraki.com>

	* newsitems.py: 2.9.0 reference released.

	* Makefile (REFTARBALLS): Arrange for reference tarballs to be in
	own directory since they are numbered.

	* reference.src: Reference tarballs now in the dist/reference-tarballs
	directory.

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* about.src: Add all gnome modules and clarify a bit

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add kefir (tepache fork)

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
