@@ -1,3 +1,7 @@
+2006-09-04  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): PyGObject 2.12.0 and PyGTK 2.10.0
+
 2006-08-28  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Place article in the right place.
